syntax = "proto3";
package sixnft.admin;

import "gogoproto/gogo.proto";
import "admin/params.proto";
import "admin/authorization.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "sixnft/x/admin/types";

// GenesisState defines the admin module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  Authorization authorization = 2;
  // this line is used by starport scaffolding # genesis/proto/state
}
