syntax = "proto3";
package thesixnetwork.sixnft.nftoracle;
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/thesixnetwork/sixnft/x/nftoracle/types";

message _SetSignerParams {
    string actor_address = 1; 
    google.protobuf.Timestamp expired_at = 2
     [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  }

message BindedSigner {
  string ownerAddress = 1; 
  repeated _SetSignerParams signers = 2; 
  uint64 actorCount = 3;
}

